tests/functional2/lang/builtins.fetchtree/eval-fail-negative.err.exp
error:
       … while calling the 'fetchTree' builtin
         at /pwd/in.nix:1:1:
            1| builtins.fetchTree {
             | ^
            2|   type = "file";

       error: negative value given for fetchTree attr owner: -1
